# corpus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: binaries.yml  ci.yml  docker.yml  release.yml
corpus/: batch.py  capture.py  clean.py  cli.py  doctor.py  indexer.py  inspect.py  pack.py  remote_repo.py
corpus/mcp/: catalog.py  http_server.py  server.py  sources.py
scripts/: bump_version.py
tests/: test_capture_vtt.py  test_doctor.py  test_inspect.py  test_pack.py
